L06 Flexbox/Q04 Flexbox Calendar/style.css
* {
    padding: 0;
    margin: 0;
}

html {
    box-sizing: border-box;
}

*, *:before, *:after {
    box-sizing: inherit;
}

.container{
    display: flex;
    width: 60em;
    height: 30em;
    margin: 4em auto;
    font: 14px/1.5 Helvetics, sans-serif;
}

.workweek{
    width: 45em;
    height: 15em;
    display: flex;
    flex-flow: row wrap;
}

.workweek .title{
    width: 45em;
    padding:  1.5em 22.5em 5.5em 22.5em;
}

.workweek p{
    width: 9em;
    height: 7.5em;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    border: solid black 1px;
}

.weekend{
    display: flex;
    flex-wrap: wrap;
    width: 45em;
    height: 15em;
}

.weekend .title{
    width: 45em;
    padding:  1.5em 22.5em 5.5em 22.5em;
}

.weekend p{
    width: 22.5em;
    height: 7.5em;
    justify-content: center;
    align-items: flex-start;
    border: solid black 1px;
    display: flex;
}

.notes{
    width: 15em;
    flex-wrap: wrap;
}

.notes p{
    display: flex;
    justify-content: center;
    align-items: flex-start;
    width: 15em;
    height: 15em;
    padding: 0.5em 0 0 0;
    border: solid black 1px;
}

.notes p:first-of-type{
    border-bottom: 0px;
}

